--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "preview": "vite preview",
     "build": "tsc && vite build",
+    "postbuild": "purgecss --css dist/assets/*.css --content dist/index.html dist/assets/*.js --output dist/assets/",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,html,json,yml}\""
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
@@ -28,6 +30,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.7",
+    "sass": "^1.60.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
