--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,9 +5,14 @@ extends:
   - eslint:recommended
   - plugin:react/recommended
   - plugin:react/jsx-runtime
+  - plugin:unicorn/recommended
+  - plugin:security/recommended
   - plugin:react-hooks/recommended
   - plugin:@typescript-eslint/recommended
   - plugin:@typescript-eslint/eslint-recommended
 settings:
   react:
     version: 18.x
+rules:
+  unicorn/filename-case: off
+  unicorn/prevent-abbreviations: off
