--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.14",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2"
   },
