Added rule to use typed selector and dispatcher

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,3 +16,11 @@ settings:
 rules:
   unicorn/filename-case: off
   unicorn/prevent-abbreviations: off
+  # no-restricted-imports: off
+  '@typescript-eslint/no-restricted-imports':
+    - warn
+    - name: react-redux
+      importNames:
+        - useSelector
+        - useDispatch
+      message: Use typed hooks `useAppDispatch` and `useAppSelector` instead.
