--- a/package.json
+++ b/package.json
@@ -12,40 +12,42 @@
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,html,json,yml}\""
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^4.29.14",
-    "axios": "^1.4.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
+    "react-helmet-async": "^2.0.1",
     "react-modal": "^3.16.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-helmet": "^6.1.6",
-    "@types/react-modal": "^3.16.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^3.1.1",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2",
+    "@types/react": "^18.2.38",
+    "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-helmet": "^6.1.9",
+    "@types/react-modal": "^3.16.3",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.4",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-unicorn": "^47.0.0",
-    "lucide-react": "^0.244.0",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.7",
-    "tailwindcss": "^3.3.2",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.8"
+    "eslint-plugin-unicorn": "^49.0.0",
+    "lucide-react": "^0.292.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2"
   }
 }
