--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-helmet-async": "^2.0.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.38",
