--- a/package.json
+++ b/package.json
@@ -12,42 +12,51 @@
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,html,json,yml}\""
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
-    "@tanstack/react-query": "^5.8.4",
-    "axios": "^1.6.2",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@tanstack/react-query": "^5.20.1",
+    "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.1",
-    "react-modal": "^3.16.1",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0",
-    "react-toastify": "^9.1.3"
+    "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.50.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.38",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.2.17",
-    "@types/react-helmet": "^6.1.9",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-modal": "^3.16.3",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.4",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-unicorn": "^49.0.0",
-    "lucide-react": "^0.292.0",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "tailwindcss": "^3.3.5",
+    "eslint-plugin-security": "^2.1.0",
+    "eslint-plugin-unicorn": "^51.0.1",
+    "lucide-react": "^0.323.0",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.2"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.1"
   }
 }
