--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-query": "^5.20.1",
     "axios": "^1.6.7",
@@ -29,7 +31,6 @@
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
