--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-query": "^5.20.1",
     "axios": "^1.6.7",
@@ -31,7 +32,6 @@
     "dayjs": "^1.11.10",
     "debounce": "^2.0.0",
     "react": "^18.2.0",
-    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.50.1",
@@ -60,6 +60,7 @@
     "lucide-react": "^0.323.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
